# HackFPGA

./: HackEmulator.js  HackEmulator.wasm  README.md  deploy-website.sh  sketch.js
asm-to-hack/: CMakeLists.txt
asm-to-hack/src/: main.cpp
asm-to-hack/test/: Pong.hack  Rect.hack  assembler.sh
block-diagrams/cpu/: CPU.circ  CPU_logic.circ  CPU_many_or_gates.circ
block-diagrams/cpu/test/: HackAssembler  assemble.py  test.asm  test.hack
emulator/: CMakeLists.txt
emulator/src/: .gitignore  main.cpp  sketch.js
emulator/src/assembler/: assembler.cpp
emulator/src/compiler/: ifnode.cpp  vmcommand.cpp  vmcommand.h  whilenode.cpp
emulator/src/os/: .gitignore  Array.jack  Memory.jack  Output.jack
emulator/src/translator/: translator.cpp  translator.h
hack-sim/: CMakeLists.txt
hack-sim/src/: HackSimulator.js  HackSimulator.wasm  index.html  sketch.js
hack-sim/src/core/: main.cpp
hack-sim/test/: Pong.hack  Seven.hack
jack-os/src/: Array.jack  Array.vm  JackCompiler  Keyboard.jack  Keyboard.vm  Math.jack  Math.jack.bak  Math.vm  Memory.jack  Memory.vm  Output.jack  Output.vm  Screen.jack  Screen.vm  String.jack  String.vm  Sys.jack  Sys.vm  use_16_bit.sh  use_32_bit.sh
jack-os/src/32/: Math.jack  String.jack
jack-os/test/32-bit Test/: Main.jack  Main.vm
jack-os/test/KeyboardTest/: Keyboard.vm  Main.vm
jack-os/test/MathTest/: Math.vm
jack-os/test/MemoryTest/: Memory.jack  Memory.vm
jack-os/test/OutputTest/: Output.vm
jack-os/test/PongTest/: Array.jack  Ball.jack  Bat.jack  Keyboard.jack  Keyboard.vm  Main.jack  Math.jack  Math.vm  Memory.jack  Memory.vm  Output.jack  Output.vm  PongGame.jack  Screen.jack  Screen.vm  String.jack  String.vm  Sys.jack  Sys.vm
jack-os/test/ScreenTest/: Screen.jack  Screen.vm
jack-os/test/SortTest/: Array.jack  Keyboard.jack  Main.jack  Main.vm  Math.jack  Math.vm  Output.jack  Output.vm  Screen.vm  String.vm
jack-os/test/StringTest/: String.jack  String.vm
jack-os/test/SysTest/: Sys.jack  Sys.vm
jack-to-vm/compiler/: CMakeLists.txt
jack-to-vm/compiler/src/: main.cpp
jack-to-vm/compiler/test/: compiler.sh  parser.sh  tokenizer.sh
jack-to-vm/compiler/test/10/Square/: Main.vm
jack-to-vm/compiler/test/11/Average/: Main.vm
jack-to-vm/compiler/test/11/ComplexArrays/: Main.vm
jack-to-vm/compiler/test/11/ConvertToBin/: Main.vm
jack-to-vm/compiler/test/11/Square/: SquareGame.vm
jack-to-vm/compiler/test/tank-game/: AI.vm  Book.vm  CheatCode.vm  Image.vm  Main.vm  Menu.vm  Node.vm  Scalable.vm
jack-to-vm/compiler/wasm_build/: CMakeCache.txt  JackCompiler.js  Makefile  cmake_install.cmake  compile_commands.json
jack-to-vm/compiler/wasm_build/core-build/: Makefile  cmake_install.cmake
jack-to-vm/core/: CMakeLists.txt  ifnode.cpp  letnode.cpp  parser.cpp  parser.h  subroutinecall.cpp  subroutinenode.cpp  term.cpp  vmcommand.cpp  vmcommand.h  whilenode.cpp
jack-to-vm/interpreter/: CMakeLists.txt  README.md  make_build_folder.sh
jack-to-vm/interpreter/src/: JackInterpreter.js  JackInterpreter.wasm  Makefile  index.html  sketch.js
jack-to-vm/interpreter/src/interpreter-core/: main.cpp
jack-to-vm/interpreter/src/jack-os/: Array.vm  Keyboard.vm  Math.vm  Memory.vm  Output.vm  Screen.vm  String.vm  Sys.vm
jack-to-vm/interpreter/test/: run-server.sh
jack-to-vm/interpreter/test/sort/: Main.jack
os/: Keyboard.jack  Math.jack  Screen.jack  String.jack  Sys.jack
toolchain/: HackAssembler  JackCompiler  JackToolchain.py  Tank.hack  VMTranslator
toolchain/jack-os/: Array.jack  Array.vm  Keyboard.jack  Keyboard.vm  Math.jack  Math.vm  Memory.jack  Memory.vm  Output.jack  Output.vm  Screen.jack  Screen.vm  String.jack  String.vm  Sys.jack  Sys.vm
toolchain/test/: .gitignore
toolchain/test/10/ArrayTest/: Main.vm
toolchain/test/11/Average/: Average.hack
toolchain/test/11/ComplexArrays/: ComplexArray.hack
toolchain/test/11/Pong/: Ball.vm  Bat.vm  Pong.hack  PongGame.vm
toolchain/test/11/Seven/: Seven.hack
toolchain/test/11/Square/: Square.hack  Square.vm
toolchain/test/others/: Factorial.hack  Main.jack  Main.vm
toolchain/test/sort/: Keyboard.vm  Main.jack  Main.vm  Math.vm  Memory.vm  Output.vm  Sort.hack  Sys.vm
toolchain/test/tank-game/: AI.vm  Album.vm  Array.vm  Author.vm  Bomb.vm  Book.vm  Bullet.vm  Cheat.vm  CheatCode.vm  Game.vm  Image.vm  Label.vm  List.vm  Main.vm  Map.vm  Map_maker.vm  Menu.vm  Player.vm  Scalable.vm  Screen.vm  Statement.vm  String.vm  Tank.vm
vm-to-asm/: CMakeLists.txt
vm-to-asm/src/: main.cpp
vm-to-asm/test/: out.asm  translator.sh
vm-to-asm/test/07/MemoryAccess/BasicTest/: BasicTest.asm
vm-to-asm/test/07/MemoryAccess/PointerTest/: PointerTest.asm
vm-to-asm/test/07/MemoryAccess/StaticTest/: StaticTest.asm
vm-to-asm/test/07/StackArithmetic/StackTest/: StackTest.asm
vm-to-asm/test/08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
vm-to-asm/test/08/FunctionCalls/NestedCall/: NestedCall.asm
vm-to-asm/test/08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
vm-to-asm/test/08/FunctionCalls/StaticsTest/: StaticsTest.asm
vm-to-asm/test/08/ProgramFlow/BasicLoop/: BasicLoop.asm
vm-to-asm/test/08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
